--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,10 @@ jobs:
           node-version: 18
 
       - run: npm install
-      - run: npm run start
+        
+      - name: Run API Test
+        continue-on-error: true
+        run: npm run start
 
       - name: Upload API Report
         uses: actions/upload-artifact@v4
