--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -87,11 +87,11 @@ jobs:
         - run: npm install
   
        
-        - name: Set up JDK 11
+        - name: Set up JDK 17
           uses: actions/setup-java@v3
           with:
-            distribution: 'zulu'
-            java-version: '11'
+                 distribution: 'temurin'
+                 java-version: '17'
   
        
         - name: Download APK
