--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -84,14 +84,14 @@ jobs:
           with:
             node-version: 18
   
-        - run: npm install
-  
        
         - name: Set up JDK 17
           uses: actions/setup-java@v3
           with:
-                 distribution: 'temurin'
-                 java-version: '17'
+            distribution: 'temurin'
+            java-version: '17'
+  
+        - run: npm install
   
        
         - name: Download APK
@@ -100,7 +100,21 @@ jobs:
             curl -L -o ./apk/android.wdio.native.app.v2.0.0.apk \
               "https://github.com/webdriverio/native-demo-app/releases/download/v2.0.0/android.wdio.native.app.v2.0.0.apk"
   
-    
+        
+        - name: Enable KVM
+          run: |
+            echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm.rules
+            sudo udevadm control --reload-rules
+            sudo udevadm trigger
+            sudo usermod -a -G kvm $USER
+            sudo chmod 666 /dev/kvm || true
+            ls -la /dev/kvm
+  
+        
+        - name: Setup Android SDK
+          uses: android-actions/setup-android@v3
+  
+        
         - name: Run tests on Emulator
           uses: reactivecircus/android-emulator-runner@v2
           with:
@@ -108,10 +122,19 @@ jobs:
             arch: x86_64
             profile: pixel_4
             avd-name: test
-            emulator-options: -no-window -no-snapshot -noaudio -no-boot-anim -accel on
+            
+            emulator-options: -no-window -no-snapshot -noaudio -no-boot-anim -gpu swiftshader_indirect -no-accel
             disable-animations: true
             working-directory: ./mobile-testing
             script: |
+              # Tunggu emulator benar-benar siap
+              echo "Waiting for emulator to boot..."
+              adb wait-for-device
+              adb shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
+              adb shell settings put global window_animation_scale 0
+              adb shell settings put global transition_animation_scale 0
+              adb shell settings put global animator_duration_scale 0
+              
               # Install global tools
               npm install -g appium
               
@@ -130,7 +153,6 @@ jobs:
               # Jalankan test
               npm run wdio
   
-       
         - name: Upload Mobile Allure
           if: always()
           uses: actions/upload-artifact@v4
