--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -69,102 +69,186 @@ jobs:
   # ==================================
   # MOBILE - WDIO + EMULATOR
   # ==================================
-  mobile-test:
-      name: Mobile Automation
-      runs-on: ubuntu-latest
+  name: Appium CICD Test
   
-      defaults:
-        run:
-          working-directory: ./mobile-testing
+  on: [push, pull_request]
+  
+  env:
+    JAVA_VERSION: '17'
+    JAVA_DISTRIBUTION: 'temurin'
+    
+  
+    ANDROID_PROFILE: Nexus 6
+    ANDROID_TARGET: google_apis
+    ANDROID_API_LEVEL: 28
+    ANDROID_ARCH: x86_64
+  
+    
+    ARTIFACT_NAME_REMOTE: allure-results-android-remote
+    
+    
+    APK_URL: "https://github.com/webdriverio/native-demo-app/releases/download/v2.0.0/android.wdio.native.app.v2.0.0.apk"
+    APK_PATH: "./apk/android.wdio.native.app.v2.0.0.apk"
+  
+  defaults:
+    run:
+      shell: bash
+  
+  jobs:
+    run-android-tests-remote:
+      name: Run Android Tests on Emulator
+      runs-on: ubuntu-latest
+      outputs:
+        test_status: ${{ steps.run_tests.outcome }}
   
       steps:
-        - uses: actions/checkout@v4
+        
+        - name: Enable KVM
+          run: |
+            echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+            sudo udevadm control --reload-rules
+            sudo udevadm trigger --name-match=kvm
+            echo "✅ KVM enabled"
+            ls -la /dev/kvm
   
-        - uses: actions/setup-node@v4
-          with:
-            node-version: 18
+        
+        - name: Checkout project
+          uses: actions/checkout@v4
   
-       
+        
         - name: Set up JDK 17
           uses: actions/setup-java@v3
           with:
             distribution: 'temurin'
             java-version: '17'
+            cache: maven
   
-        - run: npm install
+        
+        - name: Cache Maven dependencies
+          uses: actions/cache@v3
+          with:
+            path: ~/.m2
+            key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+            restore-keys: |
+              ${{ runner.os }}-m2
   
-       
-        - name: Download APK
+        
+        - name: Build with Maven
+          run: mvn clean install -DskipTests
+  
+        
+        - name: Download APK from WebdriverIO
           run: |
             mkdir -p apk
-            curl -L -o ./apk/android.wdio.native.app.v2.0.0.apk \
-              "https://github.com/webdriverio/native-demo-app/releases/download/v2.0.0/android.wdio.native.app.v2.0.0.apk"
+            echo "📥 Downloading APK from ${{ env.APK_URL }}"
+            curl -L -o ${{ env.APK_PATH }} ${{ env.APK_URL }}
+            echo "✅ APK downloaded to ${{ env.APK_PATH }}"
+            ls -la apk/
   
         
-        - name: Enable KVM
+        - name: Setup Appium
           run: |
-            echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm.rules
-            sudo udevadm control --reload-rules
-            sudo udevadm trigger
-            sudo usermod -a -G kvm $USER
-            sudo chmod 666 /dev/kvm || true
-            ls -la /dev/kvm
+            # Install Appium globally
+            npm install -g appium@latest
+            
+            # Install UiAutomator2 driver
+            appium driver install uiautomator2
+            
+            # Verifikasi instalasi
+            appium --version
+            appium driver list --installed
   
         
-        - name: Setup Android SDK
-          uses: android-actions/setup-android@v3
+        - name: Start Appium Server
+          run: |
+            # Start Appium di background
+            appium --log-level debug --log appium.log &
+            
+            # Tunggu Appium siap
+            sleep 5
+            echo "✅ Appium server started"
+            
+            # Tampilkan log untuk debugging
+            tail -n 20 appium.log || true
   
         
-        - name: Run tests on Emulator
+        - name: Run tests on Android emulator
+          id: run_tests
           uses: reactivecircus/android-emulator-runner@v2
           with:
-            api-level: 30
-            arch: x86_64
-            profile: pixel_4
-            avd-name: test
-            
-            emulator-options: -no-window -no-snapshot -noaudio -no-boot-anim -gpu swiftshader_indirect -no-accel
+            api-level: ${{ env.ANDROID_API_LEVEL }}
+            target: ${{ env.ANDROID_TARGET }}
+            arch: ${{ env.ANDROID_ARCH }}
+            profile: ${{ env.ANDROID_PROFILE }}
+            emulator-options: -no-snapshot -no-audio -no-window -gpu swiftshader_indirect -no-accel
             disable-animations: true
-            working-directory: ./mobile-testing
+            working-directory: ./
             script: |
+              echo "🚀 Emulator is starting..."
+              
               # Tunggu emulator benar-benar siap
-              echo "Waiting for emulator to boot..."
               adb wait-for-device
               adb shell 'while [[ -z $(getprop sys.boot_completed) ]]; do sleep 1; done'
+              echo "✅ Emulator boot completed"
+              
+              # Disable animations
               adb shell settings put global window_animation_scale 0
               adb shell settings put global transition_animation_scale 0
               adb shell settings put global animator_duration_scale 0
               
-              # Install global tools
-              npm install -g appium
+              # Install APK yang sudah didownload
+              echo "📲 Installing APK..."
+              adb install ${{ env.APK_PATH }}
+              echo "✅ APK installed"
               
-              # Install driver
-              appium driver install uiautomator2
+              # Verifikasi APK terinstall
+              adb shell pm list packages | grep wdio
               
-              # Start Appium
-              appium --log-level debug &
+              # Jalankan test dengan Maven
+              echo "🧪 Running tests..."
+              mvn test -Dsurefire.suiteXmlFiles=src/test/resources/testng-local.xml || true
               
-              # Tunggu Appium siap
-              sleep 10
+              # Tampilkan hasil test
+              echo "📊 Test results:"
+              ls -la target/allure-results/ || echo "No allure-results yet"
               
-              # Install APK ke emulator
-              adb install ./apk/android.wdio.native.app.v2.0.0.apk
-              
-              # Jalankan test
-              npm run wdio
+              # Matikan emulator
+              adb emu kill || true
+              echo "✅ Emulator stopped"
   
-        - name: Upload Mobile Allure
+        
+        - name: Upload Appium logs
           if: always()
           uses: actions/upload-artifact@v4
           with:
-            name: mobile-allure-results
-            path: mobile-testing/allure-results
+            name: appium-logs
+            path: appium.log
             if-no-files-found: ignore
   
-        - name: Upload Mobile Video
+        
+        - name: Upload Allure Results
           if: always()
           uses: actions/upload-artifact@v4
           with:
-            name: mobile-video
-            path: mobile-testing/reports/video
-            if-no-files-found: ignore
+            name: ${{ env.ARTIFACT_NAME_REMOTE }}
+            path: |
+              target/allure-results
+              target/surefire-reports
+            if-no-files-found: warn
+  
+        
+        - name: Test Status Summary
+          if: always()
+          run: |
+            echo "## 📱 Android Test Results" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            
+            if [[ "${{ steps.run_tests.outcome }}" == "success" ]]; then
+              echo "✅ **All tests passed!**" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "⚠️ **Some tests failed**" >> $GITHUB_STEP_SUMMARY
+              echo "" >> $GITHUB_STEP_SUMMARY
+              echo "Check the uploaded artifacts for details:" >> $GITHUB_STEP_SUMMARY
+              echo "- [Allure Results](${{ env.ARTIFACT_NAME_REMOTE }})" >> $GITHUB_STEP_SUMMARY
+              echo "- [Appium Logs](appium-logs)" >> $GITHUB_STEP_SUMMARY
+            fi
