--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -130,27 +130,26 @@ jobs:
         id: run_tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: ${{ env.ANDROID_API_LEVEL }}
-          target: ${{ env.ANDROID_TARGET }}
-          arch: ${{ env.ANDROID_ARCH }}
-          profile: ${{ env.ANDROID_PROFILE }}
-          emulator-options: -no-snapshot -no-audio -no-window -gpu swiftshader_indirect
+          api-level: 31
+          target: google_apis
+          arch: x86_64
+          profile: pixel_6
+          emulator-options: -no-window -gpu host -no-snapshot -no-audio -no-boot-anim
           disable-animations: true
           working-directory: ./mobile-testing
           script: |
-            # 1. Checking Adb
-            #adb install ${{ env.APK_PATH }}
+            # Cek apakah adb bisa melihat device
             adb devices
             
-            # 2. Start Appium (sudah terinstall di step sebelumnya)
-            echo "🚀 Starting Appium server..."
-            nohup appium --log-level debug --log appium.log & 
+            echo "🚀 Waiting for emulator to be ready..."
+            # Kita tidak perlu wait-for-device manual karena action ini sudah melakukannya
+            # Tapi kita pastikan adb server berjalan
+            adb start-server
             
-            # 3. Tunggu Appium siap
-            sleep 15
+            echo "📲 Installing APK..."
+            adb install ${{ env.APK_PATH }}
             
-            # 4. Run Test
-            echo "🧪 Running WebdriverIO tests..."
+            echo "🧪 Running tests..."
             npm run wdio
       
       - name: Upload Allure Results
