--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -88,7 +88,7 @@ jobs:
   # ==================================
   mobile-test:
     name: Run Android Tests on Emulator
-    runs-on: macos-13
+    runs-on: macos-15-intel
     outputs:
       test_status: ${{ steps.run_tests.outcome }}
   
